Add search sifting foundation

--- a/WOS.ipynb
+++ b/WOS.ipynb
@@ -342,7 +342,7 @@
    "source": [
     "### Automating Searches\n",
     "\n",
-    "The `WosCalls` class provides a means of interacting with the API 1 level up. That is, lists of search strings or sets of search parameters can be provided to run in batch. This functionality is still very much work in progress."
+    "The `WosCalls` class provides a means of interacting with the API 1 level up. That is, lists of search strings or sets of search parameters can be provided to run in batch. *This functionality is still work in progress*."
    ]
   },
   {
@@ -384,7 +384,7 @@
     "collapsed": false
    },
    "source": [
-    "The `WosCalls` class is additionally a place to house content-specific methods build on `Wos`. See `run_phylo_process` method as it develops."
+    "The `WosCalls` class is additionally a place to house content-specific methods built on `Wos`. See `run_phylo_process` method as it develops."
    ]
   },
   {
@@ -412,8 +412,8 @@
     }
    ],
    "source": [
-    "from buildsearch import BuildSearch\n",
-    "bs = BuildSearch(\"data/ohlrogge/ohlrogge_test_10.txt\")\n",
+    "from buildsearch import OhlroggeSearch\n",
+    "bs = OhlroggeSearch(\"data/ohlrogge/ohlrogge_test_10.txt\")\n",
     "bs.make_search_list() # from here the object bs.searches can be used in WosCalls()"
    ]
   },
@@ -470,9 +470,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File loaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from buildsearch import OhlroggeSearch\n",
+    "bs = OhlroggeSearch(\"data/ohlrogge/ohlrogge_test_10.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
