Test results sifting

--- a/WOS.ipynb
+++ b/WOS.ipynb
@@ -315,11 +315,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search client authorized.\n",
+      "Found 1 Results for AU=(Peiretti AND Palmegiano) AND SO=(Animal Feed Science and Technology) AND PY=2004\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(searchResults){\n",
+       "   queryId = \"1\"\n",
+       "   recordsFound = 1\n",
+       "   recordsSearched = 198821686\n",
+       "   records[] = \n",
+       "      (liteRecord){\n",
+       "         uid = \"WOS:000224567700011\"\n",
+       "         title[] = \n",
+       "            (labelValuesPair){\n",
+       "               label = \"Title\"\n",
+       "               value[] = \n",
+       "                  \"Chemical composition, organic matter digestibility and fatty acid content of evening primrose (Oenothera paradoxa) during its growth cycle\",\n",
+       "            },\n",
+       "         source[] = \n",
+       "            (labelValuesPair){\n",
+       "               label = \"Issue\"\n",
+       "               value[] = \n",
+       "                  \"3-4\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Pages\"\n",
+       "               value[] = \n",
+       "                  \"293-299\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Published.BiblioDate\"\n",
+       "               value[] = \n",
+       "                  \"OCT 15\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Published.BiblioYear\"\n",
+       "               value[] = \n",
+       "                  \"2004\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"SourceTitle\"\n",
+       "               value[] = \n",
+       "                  \"ANIMAL FEED SCIENCE AND TECHNOLOGY\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Volume\"\n",
+       "               value[] = \n",
+       "                  \"116\",\n",
+       "            },\n",
+       "         authors[] = \n",
+       "            (labelValuesPair){\n",
+       "               label = \"Authors\"\n",
+       "               value[] = \n",
+       "                  \"Peiretti, PG\",\n",
+       "                  \"Palmegiano, GB\",\n",
+       "                  \"Masoero, G\",\n",
+       "            },\n",
+       "         keywords[] = \n",
+       "            (labelValuesPair){\n",
+       "               label = \"Keywords\"\n",
+       "               value[] = \n",
+       "                  \"lipids\",\n",
+       "                  \"forage\",\n",
+       "                  \"foodstuffs\",\n",
+       "                  \"ruminant\",\n",
+       "                  \"nutrition\",\n",
+       "            },\n",
+       "         other[] = \n",
+       "            (labelValuesPair){\n",
+       "               label = \"Contributor.ResearcherID.Names\"\n",
+       "               value[] = \n",
+       "                  \"Peiretti, Pier Giorgio\",\n",
+       "                  \"Peiretti, Pier Giorgio\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Contributor.ResearcherID.ResearcherIDs\"\n",
+       "               value[] = \n",
+       "                  \"B-6871-2013\",\n",
+       "                  None,\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Identifier.Doi\"\n",
+       "               value[] = \n",
+       "                  \"10.1016/j.anifeedsci.2004.07.001\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Identifier.Ids\"\n",
+       "               value[] = \n",
+       "                  \"863ND\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Identifier.Issn\"\n",
+       "               value[] = \n",
+       "                  \"0377-8401\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"Identifier.Xref_Doi\"\n",
+       "               value[] = \n",
+       "                  \"10.1016/j.anifeedsci.2004.07.001\",\n",
+       "            },\n",
+       "            (labelValuesPair){\n",
+       "               label = \"ResearcherID.Disclaimer\"\n",
+       "               value[] = \n",
+       "                  \"ResearcherID data provided by Thomson Reuters\",\n",
+       "            },\n",
+       "      },\n",
+       " }"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from wos import Wos\n",
     "wos = Wos(client=\"Lite\")\n",
@@ -400,7 +520,8 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -486,6 +607,111 @@
    "source": [
     "from buildsearch import OhlroggeSearch\n",
     "bs = OhlroggeSearch(\"data/ohlrogge/ohlrogge_test_10.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test = dict(wos.search_results.records[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'authors': [(labelValuesPair){\n",
+       "     label = \"Authors\"\n",
+       "     value[] = \n",
+       "        \"Peiretti, PG\",\n",
+       "        \"Palmegiano, GB\",\n",
+       "        \"Masoero, G\",\n",
+       "   }], 'keywords': [(labelValuesPair){\n",
+       "     label = \"Keywords\"\n",
+       "     value[] = \n",
+       "        \"lipids\",\n",
+       "        \"forage\",\n",
+       "        \"foodstuffs\",\n",
+       "        \"ruminant\",\n",
+       "        \"nutrition\",\n",
+       "   }], 'other': [(labelValuesPair){\n",
+       "     label = \"Contributor.ResearcherID.Names\"\n",
+       "     value[] = \n",
+       "        \"Peiretti, Pier Giorgio\",\n",
+       "        \"Peiretti, Pier Giorgio\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Contributor.ResearcherID.ResearcherIDs\"\n",
+       "     value[] = \n",
+       "        \"B-6871-2013\",\n",
+       "        None,\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Identifier.Doi\"\n",
+       "     value[] = \n",
+       "        \"10.1016/j.anifeedsci.2004.07.001\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Identifier.Ids\"\n",
+       "     value[] = \n",
+       "        \"863ND\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Identifier.Issn\"\n",
+       "     value[] = \n",
+       "        \"0377-8401\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Identifier.Xref_Doi\"\n",
+       "     value[] = \n",
+       "        \"10.1016/j.anifeedsci.2004.07.001\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"ResearcherID.Disclaimer\"\n",
+       "     value[] = \n",
+       "        \"ResearcherID data provided by Thomson Reuters\",\n",
+       "   }], 'source': [(labelValuesPair){\n",
+       "     label = \"Issue\"\n",
+       "     value[] = \n",
+       "        \"3-4\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Pages\"\n",
+       "     value[] = \n",
+       "        \"293-299\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Published.BiblioDate\"\n",
+       "     value[] = \n",
+       "        \"OCT 15\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Published.BiblioYear\"\n",
+       "     value[] = \n",
+       "        \"2004\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"SourceTitle\"\n",
+       "     value[] = \n",
+       "        \"ANIMAL FEED SCIENCE AND TECHNOLOGY\",\n",
+       "   }, (labelValuesPair){\n",
+       "     label = \"Volume\"\n",
+       "     value[] = \n",
+       "        \"116\",\n",
+       "   }], 'title': [(labelValuesPair){\n",
+       "     label = \"Title\"\n",
+       "     value[] = \n",
+       "        \"Chemical composition, organic matter digestibility and fatty acid content of evening primrose (Oenothera paradoxa) during its growth cycle\",\n",
+       "   }], 'uid': WOS:000224567700011}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test\n"
    ]
   },
   {
